--- a/index.html
+++ b/index.html
@@ -6,19 +6,24 @@
     <title>Online Course Web</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
         <div id="Nav">
             <div id="txt">
-          <span>SKILL</span> <span id="hero">HERO</span>
-        </div>
-        <div id="navbar">
-        <a href="#">Home</a>
-        <a href="#">Programme</a>
-        <a href="#">Contact</a>
-        <a href="#"><button id="login"> Login</button></a>
-        <a href="#"><button id="join">Join Now</button></a>
-        </div>
+                <span>SKILL</span> <span id="hero">HERO</span>
+            </div>
+            <div id="navbar">
+                <div id="hamburger-menu">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <a href="#">Home</a>
+                <a href="#">Programme</a>
+                <a href="#">Contact</a>
+                <a href="#"><button id="login"> Login</button></a>
+                <a href="#"><button id="join">Join Now</button></a>
+            </div>
         </div>
 
         <div class="man">
